--- a/RK Tech/css/meanmenu.css
+++ b/RK Tech/css/meanmenu.css
@@ -13,7 +13,7 @@
      margin-top: 15px;
 }
  .mean-container a.meanmenu-reveal {
-     color: #fff;
+     color: rgb(22, 1, 1);
      cursor: pointer;
      display: block;
      font-family: 'Roboto', sans-serif;
